@@ -488,7 +488,7 @@ to FUSE (unless overridden by the user on the command line):
 .Pp
 .Bl -tag -width Ds -compact
 .It Fl o Ar kernel_cache
-.It Fl o Ar fsname=s3backer
+.It Fl o Ar fsname=<baseURL><bucket>/<prefix>
 .It Fl o Ar use_ino
 .It Fl o Ar entry_timeout=31536000
 .It Fl o Ar negative_timeout=31536000
